# RPiDrone

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml  docker-entrypoint.sh  exec.sh  globals.hpp.in  log.conf  log_cleanup.sh
api/: Dockerfile  api.py  main.py  requirements.txt
api/models/: config.py
conf/: config.json  log.conf  mpu.json
flightcontroller/: flightcontroller.ino  flightcontroller_sim.ino
flightcontroller/src/: COMM.cpp  COMM.h  ESC.cpp  ESC.h  PID.cpp  PID.h  config_parser.cpp  config_parser.h  control_parser.cpp  control_parser.h  imu.h  kalman.cpp  kalman.h  misc.h  mpu_helper.h  out_parser.cpp  out_parser.h  sensors.h  serial_comm.h
flightcontroller/src/MPU6050/: MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h
flightcontroller_sim/: flightcontroller_sim.ino
flightcontroller_sim/src/: ESC.cpp  PID.cpp  config_parser.cpp  misc.h  out_parser.cpp  serial_reader.h
logs/: Dockerfile  connector.py  visualizer.py
matlab/: QuadrotorSimulink.slxc  params.xlsx  quadcopter.slx  quadcopter_sim.m  quadrotor_sim.m
matlab/slprj/sim/varcache/QuadrotorSimulink/: checksumOfCache.mat  varInfo.mat
matlab/slprj/sim/varcache/QuadrotorSimulink/tmwinternal/: simulink_cache.xml
matlab/utilities/: quad_variables.asv  quad_variables.m
pyscripts/: power_plt.py  requirements.txt  test_rig.py  visualizer.py  websocket.py
pyscripts/pidFinder/: DroneController.py  DroneInput.py  DroneSimulator.py  OffsetCalculator.py  PidFinder.py  constants.py  thread.py
pyscripts/simulator/: simulator.py  testsocket.py
rpidrone/: CMakeLists.txt
rpidrone/src/: arduino.cpp  arduino.hpp  config.cpp  config.hpp  connected_client_handler.cpp  connected_client_handler.hpp  connection.cpp  connection.hpp  controls.cpp  controls.hpp  coordinator.cpp  coordinator.hpp  cpu_log.hpp  flightcontroller.cpp  flightcontroller.hpp  globals.hpp  input_parser.hpp  json_config_parser.cpp  json_config_parser.hpp  json_extension.hpp  json_input_parser.cpp  json_parser.cpp  json_parser.hpp  loop.cpp  loop.hpp  main.cpp  memory_log.hpp  misc.hpp  pid.cpp  pid.hpp  publisher.hpp  queue.cpp  queue.hpp  sensorics.cpp  sensorics.hpp  sensors.cpp  sensors.hpp  server_sub_q.cpp  server_sub_q.hpp  subqueue.hpp  (+7 more)
rpidrone/src/api/: api_server.cpp  api_server.hpp
rpidrone/src/constants/: client_input.hpp  flightcontroller.hpp
rpidrone/src/logs/: cpu_log.hpp  easylogging++.cc  log_definition.hpp  logs.hpp  memory_log.hpp  power_logs.hpp  power_logs_thread.hpp
rpidrone/src/middleware/: client.cpp  client.hpp  flightcontroller.cpp  flightcontroller.hpp
rpidrone/src/misc/: json.hpp  numeric.hpp  string.hpp
rpidrone/src/parsers/: arduino_config_parser.cpp  arduino_config_parser.hpp  arduino_input_parser.cpp  arduino_input_parser.hpp  arduino_output_parser.cpp  arduino_output_parser.hpp  json_config_parser.cpp  json_config_parser.hpp  json_input_parser.cpp  json_input_parser.hpp
rpidrone/src/parsers/flightcontroller/: config_parser.cpp  config_parser.hpp  input_parser.cpp  input_parser.hpp  output_parser.cpp  output_parser.hpp
rpidrone/src/parsers/json/: client_input_parser.cpp  client_input_parser.hpp  config_parser.cpp  config_parser.hpp
rpidrone/src/structs/: fc_output.hpp  flightcontroller_output.hpp  gps_coordinates.hpp  gps_struct.hpp  output.hpp  user_input.hpp  ypr.hpp
rpidrone/src/structs/client/: client_input.hpp  joystick.hpp
rpidrone/src/structs/config/: config.hpp  controls_struct.hpp  esc_controllers.hpp  esc_pins.hpp  escs.hpp  flightcontroller.hpp  gps.hpp  led.hpp  logic.hpp  max_ypr_rates.hpp  pid.hpp  pid_control.hpp  queues.hpp  sensors_struct.hpp  server.hpp
rpidrone/src/structs/flightcontroller/: input.hpp  output.hpp
rpidrone/src/structs/middleware/: acceleration.hpp  client_input.hpp  client_output.hpp  input.hpp  joystick.hpp  metadata.hpp  output.hpp
